tests/ui/unboxed-closures/unboxed-closures-mutate-upvar.stderr
warning[E0594]: cannot assign to `n`, as it is not declared as mutable
  --> $DIR/unboxed-closures-mutate-upvar.rs:15:9
   |
LL |         n += 1;
   |         ^^^^^^ cannot assign
   |
   = note: `#[warn(mut_non_mut)]` on by default
help: consider changing this to be mutable
   |
LL |     let mut n = 0;
   |         +++

warning[E0594]: cannot assign to `n`, as it is not declared as mutable
  --> $DIR/unboxed-closures-mutate-upvar.rs:32:9
   |
LL |         n += 1;
   |         ^^^^^^ cannot assign
   |
help: consider changing this to be mutable
   |
LL |     let mut n = 0;
   |         +++

error[E0594]: cannot assign to `n`, as it is a captured variable in a `Fn` closure
  --> $DIR/unboxed-closures-mutate-upvar.rs:48:9
   |
LL | fn to_fn<A:std::marker::Tuple,F:Fn<A>>(f: F) -> F { f }
   |                                           - change this to accept `FnMut` instead of `Fn`
...
LL |     let mut f = to_fn(move || {
   |                 ----- ------- in this closure
   |                 |
   |                 expects `Fn` instead of `FnMut`
...
LL |         n += 1;
   |         ^^^^^^ cannot assign

error[E0594]: cannot assign to `n`, as it is a captured variable in a `Fn` closure
  --> $DIR/unboxed-closures-mutate-upvar.rs:55:9
   |
LL | fn to_fn<A:std::marker::Tuple,F:Fn<A>>(f: F) -> F { f }
   |                                           - change this to accept `FnMut` instead of `Fn`
...
LL |     let mut f = to_fn(move || {
   |                 ----- ------- in this closure
   |                 |
   |                 expects `Fn` instead of `FnMut`
LL |         n += 1;
   |         ^^^^^^ cannot assign

error: aborting due to 2 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0594`.
